sql db can be loaded into :memory:

--- a/compare_tools_human.ipynb
+++ b/compare_tools_human.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,45 +10,55 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlite3\n",
-    "import gffutils\n",
+    "# import gffutils\n",
     "import time\n",
-    "import pybedtools\n",
+    "# import pybedtools\n",
     "import os\n",
     "from IPython import get_ipython\n",
-    "from multiprocessing import Pool"
+    "from multiprocessing import Pool\n",
+    "import ctypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
     "# gtf_file_name = \"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\"\n",
-    "sql_db_name = \"db-human.sqlite3\"\n",
-    "# results_file_name = \"results_human.txt\""
+    "# sql_db_name = \"db-human.sqlite3\"\n",
+    "sql_db_name = \"file:gtf?mode=memory&cache=shared\"\n",
+    "results_file_name = \"results_human.txt\"\n",
+    "lib = ctypes.CDLL(\"./gtf_to_sql.so\")\n",
+    "# Define the function signature\n",
+    "lib.run_gtf_to_sql.argtypes = [\n",
+    "    ctypes.c_char_p,  # db_name\n",
+    "    ctypes.c_char_p,  # table_name\n",
+    "    ctypes.c_char_p,  # input_file\n",
+    "    ctypes.c_int,     # num_threads\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# results_file = open(results_file_name,\"w\")"
+    "results_file = open(results_file_name,\"w\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading into pyranges object in time 139.58934473991394\n"
+      "Finished reading into pyranges object in time 128.64200735092163\n"
      ]
     }
    ],
@@ -56,12 +66,12 @@
     "start_time = time.time()\n",
     "human_gr = pr.read_gtf(gtf_file_name)\n",
     "end_time = time.time()\n",
-    "print(f\"Finished reading into pyranges object in time {end_time-start_time}\")"
+    "results_file.write(f\"Finished reading into pyranges object in time {end_time-start_time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +86,7 @@
     "# start_time = time.time()\n",
     "# human_db = gffutils.create_db(\"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\",\"/home/U210050044/data/DH607-project/human_db.sqlite3\",disable_infer_genes=True,disable_infer_transcripts=True, force=True)\n",
     "# end_time = time.time()\n",
-    "# print(f\"Finished converting gtf to sql db in time {end_time-start_time}\")"
+    "# results_file.write(f\"Finished converting gtf to sql db in time {end_time-start_time}\")"
    ]
   },
   {
@@ -91,28 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading into sql file in time 103.30280351638794\n"
+      "Finished reading into sql db in time 74.16784691810608\n"
      ]
     }
    ],
    "source": [
-    "os.system(\"g++ gtf_to_sql.cpp -lsqlite3\")\n",
+    "# Call the function\n",
+    "os.system(\"g++ -std=c++11 -shared -fPIC -o gtf_to_sql.so gtf_to_sql.cpp -lsqlite3 -pthread\")\n",
     "start_time = time.time()\n",
-    "os.system(f\"./a.out {sql_db_name} human {gtf_file_name} 8\")\n",
+    "lib.run_gtf_to_sql(sql_db_name.encode(\"utf-8\"), \"human\".encode(\"utf-8\"), gtf_file_name.encode(\"utf-8\"), 8)\n",
     "end_time = time.time()\n",
-    "print(f\"Finished reading into sql file in time {end_time-start_time}\")"
+    "results_file.write(f\"Finished reading into sql db in time {end_time-start_time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading from sql to pyranges in time 66.74821639060974\n"
+      "Finished reading from sql to pyranges in time 70.34932708740234\n"
      ]
     }
    ],
@@ -137,7 +148,7 @@
     "start_time = time.time()\n",
     "human_gr2 = pr.PyRanges(pd.read_sql(\"SELECT * FROM human\", conn))\n",
     "end_time = time.time()\n",
-    "print(f\"Finished reading from sql to pyranges in time {end_time-start_time}\")"
+    "results_file.write(f\"Finished reading from sql to pyranges in time {end_time-start_time}\\n\")"
    ]
   },
   {
@@ -157,14 +168,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.12 s ± 108 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "12 s ± 989 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "Time taken to count exons using pyranges is 12 s ± 989 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o (human_gr[human_gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))')\n",
-    "print(f\"Time taken to count exons using pyranges is {time}\")"
+    "results_file.write(f\"Time taken to count exons using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -210,7 +222,7 @@
    "source": [
     "# Using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
-    "print(f\"Time taken to count exons using sql is {time}\")"
+    "results_file.write(f\"Time taken to count exons using sql is {time}\\n\")"
    ]
   },
   {
@@ -236,9 +248,9 @@
     "exon_counts_sql[\"exon_count\"] = exon_counts_sql[\"exon_count\"].astype(int)\n",
     "exon_counts_pr[\"exon_count\"] = exon_counts_pr[\"exon_count\"].astype(int)\n",
     "if exon_counts_sql.equals(exon_counts_pr):\n",
-    "    print(\"exon counts are identical\")\n",
+    "    results_file.write(\"exon counts are identical\\n\")\n",
     "else:\n",
-    "    print(\"exon counts are not identical\")"
+    "    results_file.write(\"exon counts are not identical\\n\")"
    ]
   },
   {
@@ -264,7 +276,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_pr = (human_gr[human_gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))')\n",
-    "print(f\"Time taken to calculate total exon length using pyranges is {time}\")"
+    "results_file.write(f\"Time taken to calculate total exon length using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -312,7 +324,7 @@
    "source": [
     "# using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
-    "print(f\"Time taken to calculate total exon length using sql is {time}\")"
+    "results_file.write(f\"Time taken to calculate total exon length using sql is {time}\\n\")"
    ]
   },
   {
@@ -338,9 +350,9 @@
     "exon_lengths_sql[\"total_exon_length\"] = exon_lengths_sql[\"total_exon_length\"].astype(int)\n",
     "exon_lengths_pr[\"total_exon_length\"] = exon_lengths_pr[\"total_exon_length\"].astype(int)\n",
     "if exon_lengths_sql.equals(exon_lengths_pr):\n",
-    "    print(\"exon lengths are identical\")\n",
+    "    results_file.write(\"exon lengths are identical\\n\")\n",
     "else:\n",
-    "    print(\"exon lengths are not identical\")"
+    "    results_file.write(\"exon lengths are not identical\\n\")"
    ]
   },
   {
@@ -366,7 +378,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()')\n",
-    "print(f\"Time taken to find chromosome with most transcripts using pyranges is {time}\")"
+    "results_file.write(f\"Time taken to find chromosome with most transcripts using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -413,7 +425,7 @@
    "source": [
     "# using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = \\'transcript\\' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)')\n",
-    "print(f\"Time taken to find chromosome with most transcripts using sql is {time}\")"
+    "results_file.write(f\"Time taken to find chromosome with most transcripts using sql is {time}\\n\")"
    ]
   },
   {
@@ -437,18 +449,9 @@
     "transcript_counts_pr = human_gr2[human_gr2.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()\n",
     "transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)\n",
     "if transcript_counts_pr == transcript_counts_sql[\"Chromosome\"].values[0]:\n",
-    "    print(\"transcript counts are identical\")\n",
+    "    results_file.write(\"transcript counts are identical\\n\")\n",
     "else:\n",
-    "    print(\"transcript counts are not identical\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_file.close()"
+    "    results_file.write(\"transcript counts are not identical\\n\")"
    ]
   },
   {
@@ -461,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +479,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=True)')\n",
-    "print(f\"Time taken to merge exons using pyranges is {time}\")"
+    "results_file.write(f\"Time taken to merge exons using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -520,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -534,12 +537,12 @@
    ],
    "source": [
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_intervals_sql = get_exon_intervals_sql_multi()')\n",
-    "print(f\"Time taken to merge exons using sql is {time}\")"
+    "results_file.write(f\"Time taken to merge exons using sql is {time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +558,9 @@
     "exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=True).df.sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
     "exon_intervals_sql = get_exon_intervals_sql_multi()\n",
     "if exon_intervals_pr.equals(exon_intervals_sql):\n",
-    "    print(\"exon intervals are identical\")"
+    "    results_file.write(\"exon intervals are identical\\n\")\n",
+    "else:\n",
+    "    results_file.write(\"exon intervals are not identical\\n\")"
    ]
   },
   {
@@ -568,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +588,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000], \"Strand\": [\"+\"]}), strandedness=\"same\")')\n",
-    "print(f\"Time taken to find overlapping genes using pyranges is {time}\")"
+    "results_file.write(f\"Time taken to find overlapping genes using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -638,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -652,12 +657,12 @@
    ],
    "source": [
     "time = get_ipython().run_line_magic(\"timeit\",'-o overlapping_genes_sql = get_overlapping_genes_sql_multi()')\n",
-    "print(f\"Time taken to find overlapping genes using sql is {time}\")"
+    "results_file.write(f\"Time taken to find overlapping genes using sql is {time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -676,9 +681,9 @@
     "overlapping_genes_pr = overlapping_genes_pr.df.sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
     "diff = overlapping_genes_pr.compare(overlapping_genes_sql)\n",
     "if diff.empty:\n",
-    "    print(\"overlapping genes are identical\")\n",
+    "    results_file.write(\"overlapping genes are identical\\n\")\n",
     "else:\n",
-    "    print(\"overlapping genes are not identical\")"
+    "    results_file.write(\"overlapping genes are not identical\\n\")"
    ]
   },
   {
@@ -763,7 +768,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results_file.close()\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
