Add performance benchmarking results for pyranges and SQL operations
- Documented time taken for various operations including reading, writing, counting exons, calculating total exon length, finding chromosomes with most transcripts, merging exons, finding overlapping genes, and subtracting intervals.
- Included comparisons between pyranges and SQL for each operation, highlighting execution times and confirming identical results.

--- a/compare_tools.ipynb
+++ b/compare_tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-09 21:30:14,555\tINFO worker.py:1852 -- Started a local Ray instance.\n"
+      "2025-04-09 22:18:31,034\tINFO worker.py:1852 -- Started a local Ray instance.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c678327625fc44558cbba81cf08c5b56",
+       "model_id": "cf8bc0b7584d4e2099cc4f48d37c0e89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,12 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql_table_name = \"human\"\n",
-    "gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
+    "# sql_table_name = \"human\"\n",
+    "sql_table_name = \"mouse\"\n",
+    "# gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
+    "gtf_file_name = \"gencode.vM36.annotation.gtf\"\n",
     "sql_db_name = f\"db-{sql_table_name}.sqlite3\"\n",
     "# sql_db_name = f\"file:{sql_table_name}gtf?mode=memory&cache=shared\"\n",
     "results_file_name = f\"results_{sql_table_name}.txt\"\n",
@@ -132,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading into pyranges object in time 57.076722383499146\n"
+      "Finished reading into pyranges object in time 44.47409415245056\n"
      ]
     }
    ],
@@ -155,80 +157,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submitted 226778 lines to ray in 237ms\n",
-      "Processed 226778 lines in 483ms\n",
-      "Flattened SQL statements in 72ms\n",
-      "Submitted 230863 lines to ray in 276ms\n",
-      "Processed 230863 lines in 585ms\n",
-      "Flattened SQL statements in 73ms\n",
-      "Submitted 230258 lines to ray in 277ms\n",
-      "Processed 230258 lines in 516ms\n",
-      "Flattened SQL statements in 79ms\n",
-      "Submitted 231668 lines to ray in 236ms\n",
-      "Processed 231668 lines in 571ms\n",
-      "Flattened SQL statements in 81ms\n",
-      "Submitted 230970 lines to ray in 207ms\n",
-      "Processed 230970 lines in 600ms\n",
-      "Flattened SQL statements in 85ms\n",
-      "Submitted 230807 lines to ray in 199ms\n",
-      "Processed 230807 lines in 581ms\n",
-      "Flattened SQL statements in 83ms\n",
-      "Submitted 231833 lines to ray in 218ms\n",
-      "Processed 231833 lines in 633ms\n",
-      "Flattened SQL statements in 58ms\n",
-      "Submitted 230659 lines to ray in 146ms\n",
-      "Processed 230659 lines in 561ms\n",
-      "Flattened SQL statements in 53ms\n",
-      "Submitted 228836 lines to ray in 143ms\n",
-      "Pushed a batch to SQLite in 7393ms\n",
-      "Processed 228836 lines in 598ms\n",
-      "Flattened SQL statements in 50ms\n",
-      "Submitted 227870 lines to ray in 150ms\n",
-      "Processed 227870 lines in 578ms\n",
-      "Flattened SQL statements in 55ms\n",
-      "Submitted 232049 lines to ray in 160ms\n",
-      "Processed 232049 lines in 578ms\n",
-      "Flattened SQL statements in 51ms\n",
-      "Submitted 229362 lines to ray in 154ms\n",
-      "Processed 229362 lines in 555ms\n",
-      "Flattened SQL statements in 55ms\n",
-      "Submitted 229068 lines to ray in 139ms\n",
-      "Processed 229068 lines in 555ms\n",
-      "Flattened SQL statements in 59ms\n",
-      "Submitted 229781 lines to ray in 132ms\n",
-      "Processed 229781 lines in 579ms\n",
-      "Flattened SQL statements in 54ms\n",
-      "Submitted 228225 lines to ray in 127ms\n",
-      "Processed 228225 lines in 608ms\n",
-      "Flattened SQL statements in 53ms\n",
-      "Submitted 14956 lines to ray in 6ms\n",
-      "Processed 14956 lines in 186ms\n",
-      "Flattened SQL statements in 2ms\n",
+      "Submitted 226943 lines to ray in 238ms\n",
+      "Processed 226943 lines in 434ms\n",
+      "Flattened SQL statements in 64ms\n",
+      "Submitted 228849 lines to ray in 366ms\n",
+      "Processed 228849 lines in 361ms\n",
+      "Flattened SQL statements in 60ms\n",
+      "Submitted 228256 lines to ray in 219ms\n",
+      "Processed 228256 lines in 483ms\n",
+      "Flattened SQL statements in 61ms\n",
+      "Submitted 225531 lines to ray in 223ms\n",
+      "Processed 225531 lines in 453ms\n",
+      "Flattened SQL statements in 60ms\n",
+      "Submitted 222060 lines to ray in 198ms\n",
+      "Processed 222060 lines in 492ms\n",
+      "Flattened SQL statements in 61ms\n",
+      "Submitted 225795 lines to ray in 213ms\n",
+      "Processed 225795 lines in 450ms\n",
+      "Flattened SQL statements in 57ms\n",
+      "Submitted 225483 lines to ray in 248ms\n",
+      "Processed 225483 lines in 465ms\n",
+      "Flattened SQL statements in 61ms\n",
+      "Submitted 232326 lines to ray in 231ms\n",
+      "Processed 232326 lines in 415ms\n",
+      "Flattened SQL statements in 63ms\n",
+      "Submitted 233803 lines to ray in 271ms\n",
+      "Pushed a batch to SQLite in 6622ms\n",
+      "Processed 233803 lines in 430ms\n",
+      "Flattened SQL statements in 47ms\n",
+      "Submitted 229851 lines to ray in 134ms\n",
+      "Processed 229851 lines in 485ms\n",
+      "Flattened SQL statements in 43ms\n",
+      "Submitted 199206 lines to ray in 124ms\n",
+      "Processed 199206 lines in 427ms\n",
+      "Flattened SQL statements in 43ms\n",
       "Reader thread finished reading file\n",
-      "Pushed a batch to SQLite in 6144ms\n",
-      "Pushed a batch to SQLite in 2321ms\n",
-      "Pushed a batch to SQLite in 2373ms\n",
-      "Pushed a batch to SQLite in 2571ms\n",
-      "Pushed a batch to SQLite in 2421ms\n",
-      "Pushed a batch to SQLite in 2309ms\n",
-      "Pushed a batch to SQLite in 2347ms\n",
-      "Pushed a batch to SQLite in 2424ms\n",
-      "Pushed a batch to SQLite in 2533ms\n",
-      "Pushed a batch to SQLite in 2455ms\n",
-      "Pushed a batch to SQLite in 2411ms\n",
-      "Pushed a batch to SQLite in 2549ms\n",
-      "Pushed a batch to SQLite in 2361ms\n",
-      "Pushed a batch to SQLite in 2361ms\n",
-      "Pushed a batch to SQLite in 139ms\n",
-      "Time taken to create indices: 2941ms\n",
-      "Finished writing into sql db in time 52.14811086654663\n"
+      "Pushed a batch to SQLite in 3118ms\n",
+      "Pushed a batch to SQLite in 2055ms\n",
+      "Pushed a batch to SQLite in 2015ms\n",
+      "Pushed a batch to SQLite in 2033ms\n",
+      "Pushed a batch to SQLite in 2009ms\n",
+      "Pushed a batch to SQLite in 2010ms\n",
+      "Pushed a batch to SQLite in 2075ms\n",
+      "Pushed a batch to SQLite in 2119ms\n",
+      "Pushed a batch to SQLite in 2214ms\n",
+      "Pushed a batch to SQLite in 1771ms\n",
+      "Time taken to create indices: 1736ms\n",
+      "Finished writing into sql db in time 33.13950705528259\n"
      ]
     }
    ],
@@ -271,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +273,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.67 s ± 1.83 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to count exons using pyranges is 6.67 s ± 1.83 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o (gr[gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))')\n",
@@ -314,16 +287,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 s ± 7.75 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to count exons using sql is 1 s ± 7.75 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",f'-o exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM {sql_table_name} WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
@@ -335,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -373,16 +337,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.29 s ± 60.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to calculate total exon length using pyranges is 6.29 s ± 60.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_pr = (gr[gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))')\n",
@@ -396,16 +351,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.13 s ± 9.56 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to calculate total exon length using sql is 1.13 s ± 9.56 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",f'-o exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM {sql_table_name} WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
@@ -417,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -455,16 +401,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.36 s ± 128 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to find chromosome with most transcripts using pyranges is 1.36 s ± 128 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_pr = gr[gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()')\n",
@@ -478,16 +415,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "516 ms ± 10.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to find chromosome with most transcripts using sql is 516 ms ± 10.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",f'-o transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM {sql_table_name} WHERE Feature = \\'transcript\\' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)')\n",
@@ -499,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -536,16 +464,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.96 s ± 145 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to merge exons using pyranges is 2.96 s ± 145 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_intervals_pr = gr[gr.Feature == \"exon\"].merge(strand=True)')\n",
@@ -557,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,18 +499,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "780 ms ± 49.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to merge exons using sql is 780 ms ± 49.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_intervals_sql = get_exon_intervals_sql_multi()')\n",
     "if OUTPUT_MODE == \"file\":\n",
@@ -602,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -637,30 +547,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "if sql_table_name == \"human\":\n",
     "    other_genes_dict = {\"Chromosome\": [\"1\"], \"Start\": [1000000], \"End\": [2000000], \"Strand\": [\"+\"]}\n",
     "elif sql_table_name == \"mouse\":\n",
-    "    other_genes_dict = {\"Chromosome\": [\"chr1\"], \"Start\": [1000000], \"End\": [2000000], \"Strand\": [\"+\"]}"
+    "    other_genes_dict = {\"Chromosome\": [\"chr1\"], \"Start\": [3000000], \"End\": [4000000], \"Strand\": [\"+\"]}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "330 ms ± 2.51 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to find overlapping genes using pyranges is 330 ms ± 2.51 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o overlapping_genes_pr = gr[gr.Feature == \"gene\"].overlap(pr.from_dict(other_genes_dict), strandedness=\"same\")')\n",
@@ -672,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,18 +600,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "271 ms ± 6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to find overlapping genes using sql is 271 ms ± 6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time = get_ipython().run_line_magic(\"timeit\",'-o overlapping_genes_sql = get_overlapping_genes_sql_multi()')\n",
     "if OUTPUT_MODE == \"file\":\n",
@@ -721,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,16 +667,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.7 s ± 174 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to subtract intervals using pyranges is 10.7 s ± 174 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o subtracted_intervals_pr = gr[gr.Feature == \"exon\"].subtract(other_cdf, strandedness=\"same\")')\n",
@@ -796,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,18 +706,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12.3 s ± 305 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "Time taken to subtract intervals using sql is 12.3 s ± 305 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time = get_ipython().run_line_magic(\"timeit\",'-o subtracted_intervals_sql = get_subtracted_intervals_sql_multi()')\n",
     "if OUTPUT_MODE == \"file\":\n",
@@ -845,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -877,21 +751,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results_file' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresults_file\u001b[49m\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m      2\u001b[0m conn\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'results_file' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_file.close()\n",
     "conn.close()"
@@ -899,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
