--- a/compare_tools.ipynb
+++ b/compare_tools.ipynb
@@ -29,13 +29,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-09 22:18:31,034\tINFO worker.py:1852 -- Started a local Ray instance.\n"
+      "2025-04-15 22:29:02,591\tINFO worker.py:1852 -- Started a local Ray instance.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf8bc0b7584d4e2099cc4f48d37c0e89",
+       "model_id": "877d57e0f87f47459fbca90b512ed0f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +59,7 @@
        "        <table class=\"jp-RenderedHTMLCommon\" style=\"border-collapse: collapse;color: var(--jp-ui-font-color1);font-size: var(--jp-ui-font-size1);\">\n",
        "    <tr>\n",
        "        <td style=\"text-align: left\"><b>Python version:</b></td>\n",
-       "        <td style=\"text-align: left\"><b>3.12.3</b></td>\n",
+       "        <td style=\"text-align: left\"><b>3.10.12</b></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td style=\"text-align: left\"><b>Ray version:</b></td>\n",
@@ -72,7 +72,7 @@
        "</div>\n"
       ],
       "text/plain": [
-       "RayContext(dashboard_url='', python_version='3.12.3', ray_version='2.44.1', ray_commit='daca7b2b1a950dc7f731e34e74c76ae383794ffe')"
+       "RayContext(dashboard_url='', python_version='3.10.12', ray_version='2.44.1', ray_commit='daca7b2b1a950dc7f731e34e74c76ae383794ffe')"
       ]
      },
      "execution_count": 2,
@@ -86,15 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sql_table_name = \"human\"\n",
     "sql_table_name = \"mouse\"\n",
-    "# gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
-    "gtf_file_name = \"gencode.vM36.annotation.gtf\"\n",
-    "sql_db_name = f\"db-{sql_table_name}.sqlite3\"\n",
+    "# data_dir = \".\"\n",
+    "data_dir = \"/data1/dhananjayraman\"\n",
+    "# gtf_file_name = f\"{data_dir}/Homo_sapiens.GRCh38.112.chr.gtf\"\n",
+    "gtf_file_name = f\"{data_dir}/gencode.vM36.annotation.gtf\"\n",
+    "sql_db_name = f\"{data_dir}/db-{sql_table_name}.sqlite3\"\n",
     "# sql_db_name = f\"file:{sql_table_name}gtf?mode=memory&cache=shared\"\n",
     "results_file_name = f\"results_{sql_table_name}.txt\"\n",
     "# os.system(\"g++ -std=c++11 -shared -fPIC -o gtf_to_sql.so gtf_to_sql.cpp -lsqlite3 -pthread\")\n",
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -734,11 +736,11 @@
     "# check if subtracted_intervals_pr and subtracted_intervals_sql are identical\n",
     "subtracted_intervals_pr = gr[gr.Feature == \"exon\"].subtract(other_cdf, strandedness=\"same\")\n",
     "subtracted_intervals_sql = get_subtracted_intervals_sql_multi()\n",
-    "subtracted_intervals_sql.to_csv(\"subtracted_intervals_sql.csv\", index=False)\n",
-    "subtracted_intervals_pr.df.to_csv(\"subtracted_intervals_pr.csv\", index=False)\n",
-    "os.system(\"cat subtracted_intervals_sql.csv | sort > subtracted_intervals_sql_sorted.csv\")\n",
-    "os.system(\"cat subtracted_intervals_pr.csv | sort > subtracted_intervals_pr_sorted.csv\")\n",
-    "diff = os.popen(\"diff subtracted_intervals_sql_sorted.csv subtracted_intervals_pr_sorted.csv\").read()\n",
+    "subtracted_intervals_sql.to_csv(f\"{data_dir}/subtracted_intervals_sql.csv\", index=False)\n",
+    "subtracted_intervals_pr.df.to_csv(f\"{data_dir}/subtracted_intervals_pr.csv\", index=False)\n",
+    "os.system(f\"cat {data_dir}/subtracted_intervals_sql.csv | sort > {data_dir}/subtracted_intervals_sql_sorted.csv\")\n",
+    "os.system(f\"cat {data_dir}/subtracted_intervals_pr.csv | sort > {data_dir}/subtracted_intervals_pr_sorted.csv\")\n",
+    "diff = os.popen(f\"diff {data_dir}/subtracted_intervals_sql_sorted.csv {data_dir}/subtracted_intervals_pr_sorted.csv\").read()\n",
     "if diff == \"\":\n",
     "    results_text = \"subtracted intervals are identical\"\n",
     "else:\n",
@@ -785,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
