--- a/compare_tools.ipynb
+++ b/compare_tools.ipynb
@@ -98,7 +98,10 @@
     "gtf_file_name = f\"{data_dir}/gencode.vM36.annotation.gtf\"\n",
     "sql_db_name = f\"{data_dir}/db-{sql_table_name}.sqlite3\"\n",
     "# sql_db_name = f\"file:{sql_table_name}gtf?mode=memory&cache=shared\"\n",
-    "results_file_name = f\"results_{sql_table_name}.txt\"\n",
+    "if data_dir == \"/data1/dhananjayraman\":\n",
+    "    results_file_name = f\"results/{sql_table_name}_cluster.txt\"\n",
+    "else:\n",
+    "    results_file_name = f\"results/{sql_table_name}_pc.txt\"\n",
     "# os.system(\"g++ -std=c++11 -shared -fPIC -o gtf_to_sql.so gtf_to_sql.cpp -lsqlite3 -pthread\")\n",
     "# os.system(\"g++ -std=c++11 -shared -fPIC -o gtf_to_sql.so gtf_to_sql.cpp -lduckdb -pthread -lstdc++\")\n",
     "# lib = ctypes.CDLL(\"./gtf_to_sql.so\")\n",
@@ -787,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
